--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This is an Example of how to us Alamofire, Alamofire Image to get data and images from an api.
+This is an Example of how to us Alamofire and Alamofire Image to get data and images from an api.
 Also how to send data from one view to another via a segue.
